<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gameover2" >

    <TextView
        android:id="@+id/finalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finalScore"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/actualFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/defaultScore"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalScore"
        android:layout_below="@+id/actualFinalScore"
        android:layout_marginTop="26dp"
        android:text="@string/highScore"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/actualHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/defaultScore"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/actualHighScore"
        android:background="@android:color/white"
        android:text="@string/quit" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="26dp"
        android:layout_toLeftOf="@+id/actualHighScore"
        android:background="@android:color/white"
        android:text="@string/tryAgain" />

</RelativeLayout>
