<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/knowledgebackground"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ggc.thinkfast.MainScreen" >
    
  <FrameLayout
       android:id="@+id/main_screen"
       android:layout_height="match_parent"
       android:layout_width="match_parent">
  </FrameLayout>

    <TextView
        android:id="@+id/mainScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mainScreenTitle"
        android:layout_below="@+id/mainScreenTitle"
        android:gravity="center"
        android:text="@string/appDescription"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainScreenButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mainScreenButtonText"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/animImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/brainPic"
        android:src="@drawable/brain" />

</RelativeLayout>
